@@ -1,4 +1,4 @@
-CHANGES.txt - 01/08/2003
+CHANGES.txt - 02/20/2003
 ------------------------
 
 CHANGES IN HTMLDOC v1.8.24
@@ -14,6 +14,7 @@ CHANGES IN HTMLDOC v1.8.24
 
     BUG FIXES
 
+	- Fixed a table column sizing bug.
 	- HTMLDOC didn't read back the HTTP response properly in
 	  all situations.
 	- Fixed some more PNG transparency cases.
